fix problem with align-items in IE11

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,10 @@ body {
   justify-content: center;
   min-height: 100vh;
   padding: 16px;
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    /* IE10+ CSS styles go here */
+    height: 100vh;
+    }
 }
 
 .card {
@@ -40,17 +44,10 @@ body {
 .person {
   align-items: flex-start;
   display: flex;
-  /* RWD flexboxem */
-  /* flex-wrap: wrap; */
   &__bio {
     line-height: 22px;
     margin: 0;
   }
-  /* RWD flexboxem */
-  /* &__description {
-    flex-grow: 1;
-    flex-basis: 300px;
-  } */
   &__distinction {
     color: $distinction;
     font-weight: normal;
